Remove research folder and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -115,4 +115,5 @@ publications/2020_Combinatorial_Science/fits/*
 !publications/2020_Combinatorial_Science/fits/2020-01-08
 !publications/2020_Combinatorial_Science/fits/2020-01-09
 !publications/2020_Combinatorial_Science/fits/2020-01-10
+research/*
 .DS_Store
